Fix quote text alignment

--- a/style.css
+++ b/style.css
@@ -107,7 +107,7 @@ body {
 }
 
 .quote-text {
-    width: 800px;
+    width: 775px;
     font-style: italic;
     font-weight: 300;
 }
